[package]
name = "Lunatic-Core"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = false

[dependencies]
arc-swap = "1.7.1"
base64 = "0.22.1"
crossbeam = "0.8.4"
enum_dispatch = "0.3.13"
futures = "0.3.31"
lenient_semver = "0.4.2"
libloading = "0.8.8"
num_enum = "0.7.3"
parking_lot = "0.12.3"
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
slab = "0.4.9"
strum = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.19"
lunatic_macros= {path="./lunatic_macros"}
